2016-02-19  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
    * generic/tclmdb.c: Fix CURSOR del commmand option issue.
      Give the correct option check
    * generic/tclmdb.c: CURSOR get command add options:
      -get_multiple and -next_multiple

2016-02-16  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      1. Tweak Win32 errmsg buffer
      2. ITS#8324 Map NTAPI result codes to WIN32 codes

2016-02-05  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      ITS#7992 Fix memleak in prev change (on Windows platform)

2016-01-30  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.1 to test.
    * README.md: add -dupfixed option example
    * generic/lmdb.h: Update source code.
    * generic/mdb.c: Update source code.
      Fix MDB_VL32 mdb_cursor_count()/entrycount types
    * generic/midl.c: Update source code.
    * generic/midl.h: Update source code.
    * generic/tclmdb.c: Update source code.

2016-01-29  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
    * generic/midl.c: Update source code.

2016-01-26  Danilo Chang  <ray2501@gmail.com>

    * README.md
    * generic/mdb.c: Update source code.
    * generic/lmdb.h: Update source code.

2016-01-22  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
    * generic/lmdb.h: Update source code.

2016-01-19  Danilo Chang  <ray2501@gmail.com>

    * generic/tclmdb.c: lmdb open command add option:
      -dupfixed

2016-01-12  Danilo Chang  <ray2501@gmail.com>

    * Set version to v0.3
    * README: Update README.
    * generic/mdb.c: Update source code.
    * generic/lmdb.h: Update source code.

2016-01-07  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      Fixups for env_copy with large files (32bit Windows)

2016-01-01  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
